# amazon-timestream-odbc-driver

./: .gitignore  LICENSE  LICENSE.rtf  NOTICE  README.md  build_linux_debug32_deb.sh  build_linux_debug32_rpm.sh  build_linux_debug64.sh  build_linux_debug64_deb.sh  build_linux_debug64_rpm.sh  build_linux_release32_deb.sh  build_linux_release32_rpm.sh  build_linux_release64_deb.sh  build_linux_release64_rpm.sh  build_mac_debug64.sh  build_mac_release64.sh  run_cppcheck.sh
src/: CMakeLists.txt  README.txt  linux_32bit_toolchain.cmake
src/PowerBIConnector/AmazonTimestreamAADConnector/: AmazonTimestreamAADConnector.pq
src/PowerBIConnector/AmazonTimestreamConnector/: AmazonTimestreamConnector.pq  AmazonTimestreamConnector.query.pq
src/examples/: CMakeSettings.json.in  README.txt
src/examples/cluster-compute-example/: CMakeLists.txt
src/examples/compute-example/: CMakeLists.txt
src/examples/continuous-query-example/: CMakeLists.txt
src/examples/odbc-example/: CMakeLists.txt
src/examples/put-get-example/: CMakeLists.txt
src/examples/query-example/: CMakeLists.txt
src/markdown/: index.md
src/markdown/setup/: connection-string.md  developer-guide.md  dsn-configuration.md  setup.md  windows-dsn-configuration.md
src/markdown/support/: odbc-limitations.md  troubleshooting-guide.md  unicode-support.md
src/odbc/: CMakeLists.txt  README.txt
src/odbc-test/: CMakeLists.txt
src/odbc-test/include/: odbc_test_suite.h
src/odbc-test/scripts/: import_test_data.ps1  reinstall_mongodb.ps1
src/odbc-test/src/: api_robustness_test.cpp  application_data_buffer_test.cpp  attributes_test.cpp  column_meta_test.cpp  column_test.cpp  configuration_test.cpp  connection_test.cpp  cursor_binding_test.cpp  errors_test.cpp  java_test.cpp  jni_test.cpp  meta_queries_test.cpp  odbc_test_suite.cpp  parser_test.cpp  queries_ssl_test.cpp  queries_test.cpp  row_test.cpp  sql_esc_convert_function_test.cpp  sql_numeric_functions_test.cpp  sql_operators_test.cpp  sql_outer_join_test.cpp  sql_types_test.cpp  sql_value_expressions_test.cpp  transaction_test.cpp  types_test.cpp  utility_test.cpp
src/odbc/include/ignite/: odbc.h
src/odbc/include/timestream/: odbc.h
src/odbc/install/: install_amd64.cmd  install_x86.cmd  timestream-odbc-bundle.wxs.in.x64  timestream-odbc-bundle.wxs.in.x86  timestream-odbc-install.ini  timestream-odbc.wxs.in
src/odbc/install/mac/: README.txt  postinstall
src/odbc/src/: auth_type.cpp  common_types.cpp  connection.cpp  cred_prov_class.cpp  descriptor.cpp  dsn_config.cpp  entry_points.cpp  environment.cpp  idp_name.cpp  ignite_error.cpp  interval_day_second.cpp  interval_year_month.cpp  log.cpp  log_level.cpp  odbc.cpp  read_preference.cpp  scan_method.cpp  statement.cpp  time.cpp  timestamp.cpp  timestream_column.cpp  timestream_cursor.cpp  timestream_row.cpp  ts_error.cpp  type_traits.cpp  utility.cpp
src/odbc/src/app/: application_data_buffer.cpp  parameter.cpp
src/odbc/src/authentication/: aad.cpp  auth_type.cpp  okta.cpp  saml.cpp
src/odbc/src/common/: utils.cpp
src/odbc/src/config/: config_tools.cpp  configuration.cpp  connection_info.cpp  connection_string_parser.cpp
src/odbc/src/diagnostic/: diagnosable_adapter.cpp  diagnostic_record.cpp  diagnostic_record_storage.cpp
src/odbc/src/impl/: ignite_environment.cpp
src/odbc/src/jni/: java.cpp
src/odbc/src/meta/: column_meta.cpp  foreign_key_meta.cpp  primary_key_meta.cpp  table_meta.cpp
src/odbc/src/query/: batch_query.cpp  column_metadata_query.cpp  column_privileges_query.cpp  data_query.cpp  foreign_keys_query.cpp  primary_keys_query.cpp  procedure_columns_query.cpp  procedures_query.cpp  special_columns_query.cpp  statistics_query.cpp  table_metadata_query.cpp  table_privileges_query.cpp  type_info_query.cpp
src/odbc/src/streaming/: streaming_context.cpp
src/tests/: CMakeLists.txt  README.md
src/tests/data-writer/: CMakeLists.txt  timestream_data_generator.cpp  timestream_writer.cpp  timestream_writer.h
src/tests/data-writer/metadata-creator/: computer_table_creater.h  measure_metadata_creater.h
src/tests/input/: corrupt_credentials1  corrupt_credentials2  create_credentials_file.ps1  create_credentials_file.sh  empty_credentials  incomplete_credentials  test_credentials
src/tests/integration-test/: CMakeLists.txt
src/tests/integration-test/include/: complex_type.h  odbc_test_suite.h  sql_test_suite_fixture.h  test_server.h  test_type.h  test_utils.h
src/tests/integration-test/src/: api_robustness_test.cpp  application_data_buffer_test.cpp  attributes_test.cpp  authentication_test.cpp  column_test.cpp  connection_info_test.cpp  connection_test.cpp  cursor_binding_test.cpp  cursor_test.cpp  descriptors_test.cpp  errors_test.cpp  meta_queries_test.cpp  odbc_execution_test.cpp  odbc_test_suite.cpp  parser_test.cpp  queries_ssl_test.cpp  queries_test.cpp  row_test.cpp  sql_aggregate_functions_test.cpp  sql_date_time_functions_test.cpp  sql_esc_convert_function_test.cpp  sql_get_info_test.cpp  sql_numeric_functions_test.cpp  sql_operators_test.cpp  sql_outer_join_test.cpp  sql_parsing_test.cpp  sql_string_functions_test.cpp  sql_system_functions_test.cpp  sql_test_suite_fixture.cpp  sql_types_test.cpp  sql_value_expressions_test.cpp  streaming_test.cpp  test_server.cpp  test_utils.cpp  transaction_test.cpp  types_test.cpp
src/tests/performance/include/: performance_test_runner.h
src/tests/performance/src/: performance.cpp
src/tests/unit-test/: CMakeLists.txt
src/tests/unit-test/include/: odbc_unit_test_suite.h
src/tests/unit-test/src/: column_meta_test.cpp  configuration_test.cpp  log_test.cpp  odbc_unit_test_suite.cpp  unit_connection_string_parser_test.cpp  unit_connection_test.cpp  unit_data_query_test.cpp  utility_test.cpp
src/unit-test/: CMakeLists.txt
src/unit-test/include/: odbc_unit_test_suite.h
src/unit-test/include/mock/: mock_environment.h  mock_timestream_query_client.h  mock_timestream_service.h
src/unit-test/src/: odbc_unit_test_suite.cpp  unit_connection_test.cpp
src/unit-test/src/mock/: mock_connection.cpp  mock_environment.cpp  (+3 more)
(+182 files in other folders)
